fix link to rss  alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -425,4 +425,6 @@ hr, hr::after {
 
 .title .rss-link {
   padding-left: 1ch;
+  position: relative;
+  top: 3px;
 }
